--- a/raw/less/sh._vars.less
+++ b/raw/less/sh._vars.less
@@ -18,6 +18,7 @@
 // // fonts
 @fontface: "Faustina", "Segoe UI", serif;
 @sans: "Inter", "sans-serif";
+@banner: "DM Sans", "sans-serif";
 // @fontface-ar: "Traditional Arabic", tahoma, sans-serif;
 
 // @htmlFontBase: 62.5%; // mobile html font-size
