--- a/src/_includes/home.html
+++ b/src/_includes/home.html
@@ -1,19 +1,24 @@
 
-
+<div class="homebanner">
+  Distraction
+</div>
 
 <div class="page">
   <div class="container">
+    <div class="row-spaced  hometitle doublespaced">
+      <h1 class="f5 weight-bold allcaps">Israel Pants on fire</h1>
+      <h5 class="f5 weight-normal cam openabout">What about October 7? <span class="triangle tilt"></span></h5>
+    </div>
 
     <div class="row-spaced spaced">
-      <div class="col md-4">
-        <h1 class="f5 weight-black allcaps spaced">Israel Pants on fire</h1>
-        <h5 class="f6 weight-normal cam openabout">What about October 7? <span class="triangle tilt"></span></h5>
+      <div class="col c-6 maintext">
+          {{ freetext.main }}
       </div>
-      <div class="col md-8">
-        {{ freetext.main }}
+      <div class="col c-6 sideimage">
+        {{ freetext.total }}
       </div>
-
     </div>
+
   </div>
 </div>
 <div class="animate frombottom modal-bottom-sheet">
