--- a/raw/less/ui._web.less
+++ b/raw/less/ui._web.less
@@ -1,60 +1,117 @@
 body {
-    line-height: 1.3;
+  line-height: 1.3;
 
+}
+.page {
+  position: relative;
+  background-color: fade(@white, 90%);
 }
 .image {
-    display: block;
+  display: block;
 
-    img {
-        width: 100%;
-        object-fit: cover;
-        aspect-ratio: 2;
-        border-radius: 0.5rem;
-    }
+  img {
+    width: 100%;
+    object-fit: cover;
+    aspect-ratio: 2;
+    border-radius: 0.5rem;
+  }
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: @sans;
-    font-weight: 900;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: @sans;
+  // font-weight: 500;
 
 }
-.f3 {
-    margin-block-end: @space;
-    line-height: 1rem;
+
+.lh {
+  line-height: 1;
 }
-h1 {
-    line-height: 1rem;
-}
-h5 {
-    margin-block-end: @space;
-}
-.f5 {
-    font-size: @font-size * 1rem;
-}
+
 
 .allcaps {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
+
 button {
-    appearance: none;
-    border: none;
-    background: transparent;
+  appearance: none;
+  border: none;
+  background: transparent;
 }
+
 .modal-close {
-    transform: rotate(180deg);
-    cursor: pointer;
+  transform: rotate(180deg);
+  cursor: pointer;
+}
+
+.homebanner {
+  text-transform: uppercase;
+  font-family: @banner;
+  font-weight: 1000;
+  font-size: 18cqw;
+  position: sticky;
+  inset-inline: -2cqw 0;
+  inset-block-start: -10cqw;
+  line-height: 1;
+  letter-spacing: -2cqw;
+  z-index: 0;
+  overflow: hidden;
+  color: @grey-dark;
+  margin-block-end: -5rem;
+}
+
+.hometitle {
+  background-color: fade(@white, 80%);
+  position: relative;
+  z-index: 1000;
+}
+.maintext .f4 {
+  font-weight: 300;
+  margin-bottom: @space * 2;
+}
+.sideimage {
+  position: relative;
+  img {
+    width: 100%;
+    object-fit: cover;
+    aspect-ratio: 3/4;
+    inset: 0;
+  }
+  p {
+    margin: 1rem;
+    position: absolute;
+    inset-inline-start: 0;
+    inset-inline-end: 0;
+    inset-block-end: 0;
+    mix-blend-mode: multiply;
+    .red {
+      display: block;
+      font-size: 3rem;
+      font-weight: 900;
+      font-family: @sans;
+    }
+  }
 }
 
 .triangle {
-    width: 0;
-    height: 0;
-    display: inline-block;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 8px solid @red;
-    margin: 0 auto;
+  width: 0;
+  height: 0;
+  display: inline-block;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-bottom: 8px solid @red;
+  margin: 0 auto;
 }
+
 .tilt {
-    transform: rotate(45deg);
-    vertical-align: text-top;
+  transform: rotate(45deg);
+  vertical-align: text-top;
+}
+
+.columns {
+  columns: 3;
 }
