--- a/raw/less/sh._vars.less
+++ b/raw/less/sh._vars.less
@@ -161,7 +161,7 @@
 // @mainpad: @space;
 
 // // rounded corder radius
-// @radius: 3px;
+@radius: 0;
 // // for forms @radius-input: 0;
 
 // /* spacing and layout */
