--- a/src/_includes/home.html
+++ b/src/_includes/home.html
@@ -11,11 +11,12 @@
     </div>
 
     <div class="row-spaced spaced">
-      <div class="col c-6 maintext">
+      <div class="col md-6 maintext">
           {{ freetext.main }}
       </div>
-      <div class="col c-6 sideimage">
-        {{ freetext.total }}
+      <div class="col md-6 sideimage">
+        {{ freetext.mainphoto }}
+        <div class="total">{{ freetext.total }}</div>
       </div>
     </div>
 
