--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -37,9 +37,9 @@
   <link rel="canonical" href="https://israelpantsonfire.com/">
 
 
-  <meta name="title" property="og:title" content="{{ title }}">
-  <meta name="description" property="og:description" content="{{ description }}">
-  <meta name="image" property="og:image" content="{{ img }}">
+  <meta property="og:title" content="{{ title }}">
+  <meta property="og:description" content="{{ description }}">
+  <meta property="og:image" content="{{ img }}">
   <meta property="og:site_name" content="Israel Pants on Fire">
   <meta property="og.type" content="website">
 
@@ -51,6 +51,7 @@
   <meta property="twitter:site" content="@pants_fire52187">
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:creator" content="@pants_fire52187">
+  <meta property="twitter:description" content="{{ description }}">
   <meta property="twitter:title" content="{{ title }}">
   <meta property="twitter:image" content="{{ img }}">
 
