--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -42,9 +42,9 @@
   <meta property="og:image" content="{{ img }}">
   <meta property="og:site_name" content="Israel Pants on Fire">
   <meta property="og.type" content="website">
+  <meta property="description" content="{{ description }}">
 
   <meta property="og:url" content="https://israelpantsonfire.com/{{ page.url }}">
-  <meta property="og:description" content="{{ description }}" />
   <meta property="og:locale" content="en_GB">
 
 
