--- a/raw/less/sh._vars.less
+++ b/raw/less/sh._vars.less
@@ -9,10 +9,10 @@
 
 // @rem-enabled: true;
 // @enable-rounded: true;
-// @enable-icon-font: false;
+@enable-icon-font: true;
 // @enable-res-fonts: true; // allow scaling of fonts to change for smaller screens
 
-// @icon-font: "shuticons";
+@icon-font: "sh";
 // @icon-inline-margin: @space;
 
 // // fonts
