--- a/src/assets/css/pof.css
+++ b/src/assets/css/pof.css
@@ -122,22 +122,22 @@ textarea {
 /* rem */
 /* icons*/
 @font-face {
-  font-family: "shuticons";
+  font-family: "sh";
   font-display: block;
-  src: local("shuticons"), url("../fonts/shuticons.ttf") format("truetype"), url("../fonts/shuticons.woff") format("woff"), url("../fonts/shuticons.svg#icons") format("svg");
+  src: local("sh"), url("../fonts/sh.ttf") format("truetype"), url("../fonts/sh.woff") format("woff"), url("../fonts/sh.svg#icons") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
   @font-face {
-    font-family: "shuticons";
-    src: url("../fonts/shuticons.svg#icons") format("svg");
+    font-family: "sh";
+    src: url("../fonts/sh.svg#icons") format("svg");
   }
 }
 .liga,
 .symbol:before,
 .symbolAfter:after {
-  font-family: "shuticons";
+  font-family: "sh";
   text-transform: none;
   font-style: normal;
   font-weight: normal;
